welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:1: error: not found: value estBiscuit
if (estBiscuit()) {
    ^